# Kalkulaator

./: README.md  bitmask.c  bitmask.h  changes maybe!`?=)#"¤!=#  kalkulaator-window.c  kalkulaator-window.ui  update here
Kalk/Kalkulaator_GTK4/: History.txt  meson.build  org.github.kalkulaator.json
Kalk/Kalkulaator_GTK4/builddir/: History.txt  build.ninja  compile_commands.json  kalkulaator-config.h
Kalk/Kalkulaator_GTK4/builddir/data/: org.github.kalkulaator.desktop
Kalk/Kalkulaator_GTK4/builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json
Kalk/Kalkulaator_GTK4/builddir/meson-logs/: meson-log.txt
Kalk/Kalkulaator_GTK4/builddir/src/: History.txt  kalkulaator  kalkulaator-resources.c  kalkulaator-resources.h
Kalk/Kalkulaator_GTK4/po/: meson.build
Kalk/Kalkulaator_GTK4/src/: History.txt  bitmask.c  bitmask.h  kalkulaator-application.c  kalkulaator-application.h  kalkulaator-calc.c  kalkulaator-calc.h  kalkulaator-window.c  kalkulaator-window.h  kalkulaator-window.ui  kalkulaator.gresource.xml  meson.build  programming-window.h  programming-window.ui
Kalk/Kalkulaator_GTK4/src/gtk/: programming-overlay.ui
Kalkulaator/: org.example.App.json
Kalkulaator/data/: org.example.App.desktop.in  org.example.App.gschema.xml
Kalkulaator/po/: POTFILES
Kalkulaator/src/: kalkulaator-application.c  kalkulaator-window.c  kalkulaator-window.ui  kalkulaator.gresource.xml  main.c  meson.build
Kalkulaator_GTK4/: meson.build
Kalkulaator_GTK4/builddir/meson-info/: intro-install_plan.json  meson-info.json
Kalkulaator_GTK4/builddir/meson-logs/: meson-log.txt
Kalkulaator_GTK4/builddir/src/: kalkulaator  kalkulaator-resources.c
Kalkulaator_GTK4/data/: meson.build  org.github.kalkulaator.appdata.xml.in  org.github.kalkulaator.gschema.xml
Kalkulaator_GTK4/po/: POTFILES
Kalkulaator_GTK4/src/: kalkulaator-application.c  kalkulaator-application.h  kalkulaator-calc.c  kalkulaator-calc.h  kalkulaator-window.c  kalkulaator-window.h  kalkulaator-window.ui  main.c  meson.build  programming-application.c  programming-application.h  programming-window.c
src/: errorid  kalkulaator-window.ui_2  meson.build  testing_window.c  testing_window.h  testing_window.ui
(+4 files in other folders)
